##Text encoding: utf-8

2011-08-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcugtk/spectrumdoc.cc: use markup in combo box and axis title. 
	* libs/gcugtk/spectrumview.cc: add two methods to sanitize custom option
	widgets management.
	* libs/gcugtk/spectrumview.h: ditto.

2011-08-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atomsdlg.cc: apply radius and color changes to the whole
	selection.
	* libs/gcr/atomsdlg.h: ditto.
	* libs/gcr/grid.cc: enhance keyboard navigation.

2011-08-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atomsdlg.cc: remove obsolete  "Apply to" button.
	* libs/gcr/atomsdlg.h: ditto.
	* libs/gcr/grid.cc: enhance keyboard navigation.
	* libs/gcr/grid.h: ditto.
	* ui/crystal/atoms.ui: remove obsolete  "Apply to" button.

2011-08-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/grid.cc: enhance multiple selection handling.
	* libs/gcr/grid.h: add gcr_grid_select_all().
	* libs/gcr/linesdlg.cc: new "Select all" button.
	* libs/gcugtk/ui-builder.cc: new GetObject() method.
	* libs/gcugtk/ui-builder.h: ditto.
	* ui/crystal/lines.ui: new "Select all" button.

2011-08-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/grid.cc: enhance mouse move selection and multiple selection.
	* libs/gcr/grid.h: ditto.
	* libs/gcr/linesdlg.cc: apply color and radius change to the whole 
	selection.
	* libs/gcr/linesdlg.h: ditto.

2011-08-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/grid.cc: start work on multiple row selection.
	* libs/gcr/grid.h: ditto.
	* libs/gcr/linesdlg.cc: use multiple selection in grid.

2011-08-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* pixmaps/Makefile.am: install svg icons for mime types as well.
	* programs/crystal/view-settings.cc: make it instant apply.
	* programs/crystal/view-settings.h: ditto.
	* ui/crystal/view-settings.ui: ditto.

2011-08-16  Jean Bréfort  <jean.brefort@normalesup.org>